--- a/css/app/overlay.css
+++ b/css/app/overlay.css
@@ -187,6 +187,13 @@
 	text-decoration: none;
 }
 
+#tags-tags a:focus,
+#tags-attributes a:focus {
+	outline: 2px solid var(--outline);
+	outline-offset: 2px;
+	border-radius: 5px;
+}
+
 #tags h1 a {
 	margin-right: 0;
 }
@@ -248,6 +255,10 @@
 }
 
 #tags-label a {
+	margin: 0 10px 0 0;
+}
+
+#tags-label span + a {
 	margin-left: 20px;
 }
 
