--- a/css/shared/global.css
+++ b/css/shared/global.css
@@ -169,6 +169,51 @@ p.buttons {
 }
 
 
+/* MARKS ---------------------------------------- */
+
+mark {
+	border-radius: 5px;
+	background-color: var(--colorYellow);
+	color: var(--text);
+	font-weight: bold;
+}
+
+mark.color2 {
+	background-color: var(--colorGreen);
+	color: #fff;
+}
+
+mark.color3 {
+	background-color: var(--colorBlueDark);
+	color: #fff;
+}
+
+mark.color4 {
+	background-color: var(--colorRed);
+	color: #fff;
+}
+
+mark.color5 {
+	background-color: var(--colorBlueLight);
+	color: #fff;
+}
+
+mark.color6 {
+	background-color: var(--colorCyan);
+	color: #fff;
+}
+
+mark.no-start {
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+mark.no-end {
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+
 /* MISCELLANEOUS -------------------------------- */
 
 #loading {
