--- a/css/app/bars.css
+++ b/css/app/bars.css
@@ -14,7 +14,7 @@
 	padding: 10px;
 	width: 250px;
 	height: calc(100vh - 111px - 20px - 3px);
-	background-color: var(--bgBlue);
+	background-color: var(--colorBlueDark);
 	color: #fff;
 	font-size: .8rem;
 	line-height: 1.2rem;
@@ -214,7 +214,7 @@
 	padding: 2px 10px 2px 34px;
 	width: max-content;
 	min-width: 80px;
-	background-color: var(--bgGreyLight);
+	background-color: var(--colorGreyLight);
 	background-image: url(../../img/app/select-open.svg);
 	background-position: 5px 2px;
 	background-repeat: no-repeat;
@@ -249,7 +249,7 @@
 	opacity: 1;
 	border: 1px solid var(--line);
 	border-radius: 10px;
-	background-color: var(--bgGreyLight);
+	background-color: var(--colorGreyLight);
 	transition: opacity .1s linear;
 }
 
