--- a/css/app/overlay.css
+++ b/css/app/overlay.css
@@ -44,7 +44,7 @@
 	overflow-y: auto;
 	padding: 10px;
 	max-height: 330px;
-	background-color: var(--bgGreyLight);
+	background-color: var(--colorGreyLight);
 	font-family: "Noto Sans Mono", monospace;
 	font-size: .8rem;
 	line-height: 1.2rem;
@@ -69,7 +69,7 @@
 	margin: 3px 0 -1px -1px;
 	border-bottom-left-radius: 10px;
 	padding: 15px;
-	background-color: var(--bgBlue);
+	background-color: var(--colorBlueDark);
 }
 
 #prefs li a {
@@ -212,7 +212,7 @@
 	margin-right: 10px;
 	border-radius: 5px;
 	padding: 0 5px;
-	background-color: var(--bgGreyLight);
+	background-color: var(--colorGreyLight);
 }
 
 #tags-nav a:focus,
