--- a/css/app/viewSearch.css
+++ b/css/app/viewSearch.css
@@ -70,7 +70,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	color: var(--textColor);
+	color: var(--colorBlueDark);
 	font-size: .9rem;
 	line-height: 1.35rem;
 }
