--- a/css/win/about.css
+++ b/css/win/about.css
@@ -7,7 +7,7 @@ main > *:not(aside) {
 }
 
 a {
-	color: var(--textLink);
+	color: var(--colorBlue);
 	text-decoration: none;
 	cursor: pointer;
 }
@@ -26,7 +26,7 @@ aside {
 h1 {
 	margin-top: 30px;
 	margin-bottom: 30px;
-	color: var(--textColor);
+	color: var(--colorBlueDark);
 	font-size: 1.5rem;
 	font-style: italic;
 	font-weight: normal;
@@ -42,7 +42,7 @@ p {
 
 footer {
 	padding: 20px;
-	background-color: var(--bgBlue);
+	background-color: var(--colorBlueDark);
 	color: #fff;
 }
 
