--- a/css/win/help.css
+++ b/css/win/help.css
@@ -15,10 +15,10 @@ nav {
 	top: 0;
 	left: 0;
 	box-shadow: var(--shadowRight);
-	padding: 20px;
-	width: calc(220px - 40px);
-	height: calc(100vh - 40px);
-	background-color: var(--bgBlue);
+	padding: 15px;
+	width: calc(230px - 30px);
+	height: calc(100vh - 30px);
+	background-color: var(--colorBlueDark);
 }
 
 nav ul {
@@ -51,8 +51,8 @@ nav a.active {
 }
 
 section {
-	margin-left: 220px;
-	padding: 0 20px 20px 30px;
+	margin-left: 230px;
+	padding: 0 15px 15px 30px;
 }
 
 
@@ -60,8 +60,8 @@ section {
 
 #toc {
 	position: fixed;
-	top: 11px;
-	right: 22px;
+	top: 6px;
+	right: 12px;
 	z-index: 1;
 	border-radius: 5px;
 	width: 48px;
@@ -74,14 +74,10 @@ section {
 	outline-offset: 0;
 }
 
-#toc img {
-	vertical-align: top;
-}
-
 .toc-popup {
 	position: fixed;
-	top: 71px;
-	right: 22px;
+	top: 61px;
+	right: 12px;
 	z-index: 1;
 	opacity: 0;
 	box-shadow: var(--shadow);
@@ -98,8 +94,9 @@ section {
 	display: block;
 	margin: 0 0 5px 0;
 	padding: 0 15px;
-	line-height: 2rem;
-	background-color: var(--bgBlue);
+	font-size: .8rem;
+	line-height: 1.5rem;
+	background-color: var(--colorBlueDark);
 	color: #fff;
 	text-decoration: none;
 }
@@ -119,15 +116,19 @@ section {
 	border-bottom-right-radius: 10px;
 }
 
+.toc-popup a:not(.level-1):last-child {
+	border-bottom-left-radius: 0;
+}
+
 .toc-popup a.level-2 {
-	padding-left: 35px;
+	margin-left: 15px;
 }
 
 
 /* DESCRIPTION ---------------------------------- */
 
 section a {
-	color: var(--textLink);
+	color: var(--colorBlue);
 	text-decoration: none;
 }
 
@@ -136,19 +137,32 @@ section a:hover {
 	text-decoration: underline;
 }
 
+section a[href^="http"] {
+	cursor: pointer;
+}
+
 abbr {
 	text-decoration: none;
 }
 
-h1 {
+code {
+	display: inline;
+	margin: 0;
+	border-radius: 5px;
+	padding: 0 5px;
+	word-break: break-all;
+}
+
+h1,
+h2 {
 	position: sticky;
 	top: 0;
 	z-index: 1;
-	margin: 40px 0 0 0;
-	padding: 20px 0;
+	margin: 30px 0 0 0;
+	padding: 15px 0;
 	background-color: #fff;
-	color: var(--textColor);
-	font-size: 1rem;
+	color: var(--colorBlueDark);
+	font-size: 1.1rem;
 	line-height: 1.5rem;
 }
 
@@ -156,22 +170,43 @@ h1:first-child {
 	margin-top: 0;
 }
 
-h1 span {
+h2 {
+	margin-top: 15px;
+	font-size: .9rem;
+}
+
+h1 span,
+h2 span {
 	display: inline-block;
 	border-left: 5px solid var(--colorBlueDark);
 	padding-left: 25px;
 }
 
 img {
-	position: relative;
-	top: 2px;
 	vertical-align: top;
+}
+
+kbd {
+	border-radius: 5px;
+	padding: 0 5px;
+	background-color: var(--colorGreyDark);
+	color: #fff;
+	font-family: "Noto Sans Mono", monospace;
 }
 
 p {
 	margin: 0 0 10px 0;
 	font-size: .9rem;
 	line-height: 1.5rem
+}
+
+p.hint {
+	color: var(--colorRed);
+	font-weight: bold;
+}
+
+p.indent-hint {
+	margin-left: 40px;
 }
 
 p.indent-icon {
@@ -184,6 +219,79 @@ p.indent-icon img:first-child {
 	margin-right: 10px;
 }
 
+p.scope,
+p.tag,
+p.option {
+	padding-left: 40px;
+	background-image: url(../../img/app/location.svg);
+	background-position: top left;
+	background-repeat: no-repeat;
+	background-size: 30px 30px;
+}
+
+p.tag {
+	background-image: url(../../img/app/xml.svg);
+}
+
+p.option {
+	background-image: url(../../img/app/preferences.svg);
+	font-style: italic;
+}
+
+p.scope,
+p.tag {
+	padding-left: 110px;
+	text-indent: -70px;
+}
+
+p.scope i:first-child,
+p.tag i:first-child {
+	display: inline-block;
+	width: 70px;
+	text-indent: 0;
+}
+
+pre {
+	position: relative;
+	margin: 0 0 10px 0;
+	border-radius: 10px;
+	padding: 10px;
+	background-color: var(--colorGreyLight);
+	font-family: "Noto Sans Mono", monospace;
+	font-size: .8rem;
+	line-height: 1.2rem;
+	white-space: pre-wrap;
+	word-break: break-all;
+	user-select: text;
+}
+
+pre.indent-hint {
+	margin-left: 40px;
+}
+
+pre.bogus,
+pre.correct {
+	margin-top: 20px;
+}
+
+pre.bogus::before,
+pre.correct::before {
+	content: "";
+	position: absolute;
+	top: -15px;
+	left: -15px;
+	width: 30px;
+	height: 30px;
+	background-image: url(../../img/app/button-no.svg);
+	background-position: top left;
+	background-repeat: no-repeat;
+	background-size: 30px 30px;
+}
+
+pre.correct::before {
+	background-image: url(../../img/app/button-yes.svg);
+}
+
 section ul {
 	margin: 0 0 10px 0;
 	padding: 0 0 0 30px;
@@ -194,15 +302,34 @@ section li {
 	line-height: 1.5rem;
 }
 
+.item {
+	margin-left: 40px;
+}
+
+.item > *:not(:first-child) {
+	margin-left: 40px;
+}
+
+.item > *:first-child {
+	padding-left: 40px;
+	text-indent: -40px;
+}
+
 .blue {
 	color: var(--colorBlueDark);
 }
 
-.red {
+.green,
+.green .xml-tag {
+	color: var(--colorGreen);
+}
+
+.red,
+.red .xml-tag {
 	color: var(--colorRed);
 }
 
 *:target {
-	margin-top: -70px;
-	padding-top: 70px;
+	margin-top: -60px;
+	padding-top: 60px;
 }
