--- a/css/shared/variables.css
+++ b/css/shared/variables.css
@@ -6,9 +6,8 @@
 	--textGrey: #6c757d;
 	--textGreyLight: #b6b6b6;
 	--clusterBlock: #00156a;
-	--clusterKern: #d9d9d9;
-	--clusterSaum: #f3f3f3;
-	--clusterZentrum: #e6e6e6;
+	--clusterFringe: #f3f3f3;
+	--clusterCenter: #e6e6e6;
 	--colorBlue: #002bff;
 	--colorBlueDark: #0000a9;
 	--colorBlueLight: #31C0FF;
